# spec-kit

./: CHANGELOG.md  README.md  common-ui.md  pyproject.toml
.github/workflows/scripts/: create-release-packages.sh
src/specify_cli/: __init__.py
templates/: plan-template.md  spec-template.md  tasks-api-template.md  tasks-client-template.md  tasks-server-template.md  tasks-template.md
templates/agents/: api-agent.md  checklist-agent.md  client-agent.md  environment-validation-agent.md  server-agent.md
templates/commands/: checklist.md  implement.md  specify.md  tasks.md  validate.md
